initial version (already running)

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,8 @@
-rock_library(plugin_bobj
-    SOURCES Dummy.cpp
-    HEADERS Dummy.hpp)
 
-rock_executable(plugin_bobj_bin Main.cpp
-    DEPS plugin_bobj)
+
+rock_library(osgdb_bobj
+    SOURCES ReaderWriterBOBJ.cpp
+    HEADERS ReaderWriterBOBJ.hpp)
+
+set_target_properties(osgdb_bobj PROPERTIES PREFIX "")
 
